FlightPath 6.x Changelog
========================

2021-06-11
  Added _validate function when editing a degree, so we can test for school mis-match.  Also fixed a bug where if there was more than one
  form_error() for the same element, it wouldn't display the red border around that element.  Also made it so that markup fields
  can also have form_error called on them.


2021-06-10
  Added ability to have group requirements (in degrees) with fractional hours.  Ex: 0.5 hours or 1.2 hours, etc.  Previously,
  when a group was loaded, the hours_required field was being intval()'d.  Changed to floatval().
  
  Fixed bug where course descriptions were not being cached correctly due to a typo.
  
  Wrapped "hours" and "hrs" with t() function so those words can be translated to "credits" if need be in a hook_translate function.

  Fixed bug where group couldn't be deleted from degree plan due to school_id being set.
  
  Worked on courses issues with schools.
  

2021-06-07
  Added schools select list option for user forms, made other cosmetic changes.
  
  Changed users module so that you can enter DEPT_CODE along with department.  Change table schema so that
  college, dept_code, and deparment are varchar 255.  Will use a machine name version of department if no DEPT_CODE
  is entered.
  
  Found a bug on the dashboard (system.module), where it states what day it is.  I was using strtotime("today"), which apparently
  was causing issues due to timezone conversions.  Switched it to time() and that fixed the issue.
  

2021-06-06
  Finishing up users screen for school id, both faculty and students.  Also added filter options to make it look
  more consistent.  Added pager to student users screen, since we might theoretically load the entire student
  list, both past and present.  It shows 30 at a time now.
  

2021-06-04
  Working on courses with new school_id.  Changed appearance of courses screen to look more like the other degree